ecmascript/parser/tests/test262-error-references/fail/33d43e9f01bda5ce.js.stderr
error: Expected ;, got )
 --> $DIR/tests/test262-parser/fail/33d43e9f01bda5ce.js:1:20
  |
1 | for (let x = 0 in y){}
  |                    ^

